--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import { gsap } from 'gsap';
 ---
 
-<section class='section section-center'>
+<section class='section flex-center'>
   <h1 class='text-[20vw] overflow-hidden opacity-0' id='main-title'>
     Scrolleá
   </h1>
