--- a/src/components/ScrollSectionSlide.astro
+++ b/src/components/ScrollSectionSlide.astro
@@ -6,8 +6,6 @@ type ScrollSectionSlideProps = {
 const { title, bgColor } = Astro.props as ScrollSectionSlideProps;
 ---
 
-<div
-  class={`w-screen ${bgColor} flex items-center justify-center flex-shrink-0 h-full`}
->
+<div class={`w-screen ${bgColor} flex-center flex-shrink-0 h-full`}>
   <h2 class='text-[15vw] overflow-hidden'>{title}</h2>
 </div>
