--- a/src/components/ScrollSection.astro
+++ b/src/components/ScrollSection.astro
@@ -1,37 +1,53 @@
 ---
-import { gsap } from 'gsap';
-import ScrollSectionSlide from './ScrollSectionSlide.astro';
+import { gsap } from "gsap";
+import ScrollSectionSlide from "./ScrollSectionSlide.astro";
 
 const slides = [
-  { title: 'gsap', bgColor: 'bg-slate-200' },
-  { title: 'scrolltrigger', bgColor: 'bg-green-300' },
-  { title: 'es lo más', bgColor: 'bg-red-400' },
+  { title: "gsap", bgColor: "bg-slate-200" },
+  { title: "scrolltrigger", bgColor: "bg-green-300" },
+  { title: "es lo más", bgColor: "bg-red-400" },
 ];
 ---
 
-<section class='section' id='scroll-section'>
-  <div class='w-fit flex flex-nowrap h-full' id='slider'>
+<section class="section" id="scroll-section">
+  <div class="w-fit flex flex-nowrap h-full" id="slider">
     {slides.map((slide) => <ScrollSectionSlide {...slide} />)}
   </div>
 </section>
 
 <script>
-  const slider = document.querySelector('#slider');
+  import { getLetters, textAnimation } from "../utils";
+  const slider = document.querySelector("#slider");
+  const sliderTitles = [...document.querySelectorAll(".title-scroll")];
 
   const scrollAmount = () => -(slider.scrollWidth - window.innerWidth);
 
   const tween = gsap.to(slider, {
     x: scrollAmount,
-    ease: 'none',
+    ease: "none",
   });
 
   ScrollTrigger.create({
-    trigger: '#scroll-section',
-    start: 'top top',
+    trigger: "#scroll-section",
+    start: "top top",
     end: () => `+=${Math.abs(scrollAmount())}`,
     pin: true,
     animation: tween,
     scrub: 1,
     invalidateOnRefresh: true,
+    /* markers:true */ /* Activa los marcadores si necesitás referencia */
+  });
+
+  /* Separa los titulos de los sliders en letras sueltas */
+  sliderTitles.forEach((title: HTMLElement, i: number) => {
+    title.innerHTML = getLetters(title);
+    gsap.to(title.children, {
+      ...textAnimation(),
+      scrollTrigger: {
+        trigger: !i ? title.parentElement : title,
+        start: !i ? "-10%" : "left 60%",
+        containerAnimation: !i ? undefined : tween,
+      },
+    });
   });
 </script>
