--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,37 +2,34 @@
 interface Props {
   title: string;
 }
-import '@fontsource/bebas-neue';
+import "@fontsource/bebas-neue";
 
 const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='UTF-8' />
-    <meta name='description' content='Astro description' />
-    <meta name='viewport' content='width=device-width' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='generator' content={Astro.generator} />
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script
-      src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js'
-      integrity='sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=='
-      crossorigin='anonymous'
-      referrerpolicy='no-referrer'></script>
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
+      integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
 
-    <script
-      src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js'
-      defer></script>
-    <link rel='stylesheet' href='/src/styles/base.css' />
-    <script>
-      history.scrollRestoration && (history.scrollRestoration = 'manual');
-      window.scrollTo(0, 0);
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" defer></script>
+    <link rel="stylesheet" href="/src/styles/base.css" />
+    <script is:inline>
+      history.scrollRestoration && (history.scrollRestoration = "manual");
     </script>
   </head>
-  <body class='overflow-x-hidden'>
-    <main class='text-center'>
+  <body class="overflow-x-hidden">
+    <main class="text-center">
       <slot />
     </main>
   </body>
