--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ interface Props {
   title: string;
 }
 import "@fontsource/bebas-neue";
-
+import "../styles/base.css";
 const { title } = Astro.props;
 ---
 
@@ -23,7 +23,7 @@ const { title } = Astro.props;
       referrerpolicy="no-referrer"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" defer></script>
-    <link rel="stylesheet" href="/src/styles/base.css" />
+
     <script is:inline>
       history.scrollRestoration && (history.scrollRestoration = "manual");
     </script>
