ajustes mobile devices

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,9 +17,8 @@
 
   ScrollTrigger.create({
     trigger: "#footer",
-    start: "-10%",
-    end: "bottom bottom",
+    start: "-40%",
     animation: tween,
-    /* markers:true */ /* Activa los marcadores si necesitás referencia */
+    markers: true,
   });
 </script>
