--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Hero from '../components/Hero.astro';
-import ScrollSection from '../components/ScrollSection.astro';
-import Footer from '../components/Footer.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/Hero.astro";
+import ScrollSection from "../components/ScrollSection.astro";
+import Footer from "../components/Footer.astro";
 ---
 
-<Layout title='Welcome to Astro.'>
+<Layout title="Welcome to Astro.">
   <Hero />
   <ScrollSection />
   <Footer />
