ajustes mobile devices

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,6 +19,6 @@
     trigger: "#footer",
     start: "-40%",
     animation: tween,
-    markers: true,
+    /*  markers: true, */
   });
 </script>
